syntax="proto3";

package auth;
option go_package = "proto/auth_proto";

import "google/protobuf/empty.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc RevokeToken(RevokeTokenRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

// Register user
message RegisterRequest {
  string operation_id = 1;
  string login = 2;
  string password = 3;
  string first_name = 4;
  string second_name = 5;
  string third_name = 6;
}
message RegisterResponse {
  int64 user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}

// Login user
message LoginRequest {
  string operation_id = 1;
  string login = 2;
  string password = 3;
}
message LoginResponse {
  int64 user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}

// Get user
message GetUserRequest {
  string operation_id = 1;
  int64 user_id = 2;
}
message GetUserResponse {
  int64 user_id = 1;
  string login = 2;
  string first_name = 3;
  string second_name = 4;
  string third_name = 5;
  string created_at = 6;
}

// Refresh token
message RefreshTokenRequest {
  string operation_id = 1;
  string refresh_token = 2;
}
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Update user
message UpdateUserRequest {
  string operation_id = 1;
  int64 user_id = 2;
  string first_name = 3;
  string second_name = 4;
  string third_name = 5;
}
message UpdateUserResponse {
  int64 user_id = 1;
  string first_name = 2;
  string second_name = 3;
  string third_name = 4;
}

// Revoke token
message RevokeTokenRequest {
  string operation_id = 1;
  string refresh_token = 2;
}

// Delete user
message DeleteUserRequest {
  string operation_id = 1;
  string user_id = 2;
}